--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-[?12;2$y<head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
@@ -11,7 +11,7 @@
         {% for question in questions %}
             <h2>{{ question.question }}</h2>
             {% for option in question.options %}
-                <input type="radio" name="question{{ loop.index }}" value="{{ loop.index0 }}">
+                <input type="radio" name="question{{ loop.index }}" value="{{ option }}">
                 {{ option }}<br>
             {% endfor %}
         {% endfor %}
