--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>Quiz App</title>
 </head>
 <body>
-    <h1>Welcome to our Python Quiz App!</h1>
+    <h1>Welcome to my Python Quiz App!</h1>
     <form action="/submit" method="post">
         {% for question in questions %}
             <h2>{{ question.question }}</h2>
